Added detours and pickup flexibility to db Model. Added icons/tooltips to search results page for luggage, pickup flexibility, and detours

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <title>{% block title %} Title {% endblock %}</title>
   {% block head %} {% endblock %}
+
   <style>
       /* navbar */
     .navbar-default {
@@ -120,7 +121,8 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-  {% block content %} <!-- Block content --> {% endblock %}
+  {% block content %}
+  {% endblock %}
 
 <!-- <script src="http://code.jquery.com/jquery.js"></script> -->
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
