--- a/templates/rideform.html
+++ b/templates/rideform.html
@@ -31,14 +31,16 @@
 <!-- Why isn't placeholder text displaying -->
 
 <div class="well col-xs-8 col-md-12">
-    Add flexible pickup window
+    Add flexible pickup window. To Do:
+    - Change cost so decimals not allowed
+    - If there is no street number or street... Pop up a message!
 </div>
 
 <form action="/post-ride" method="post" id="ride-form">
     <div class="form-group">
 
             <div class="row">
-                <div class="col-lg-2">
+                <div class="col-xs-2">
                     <label for="seats">Seats Available</label>
                     <select class="form-control" name="seats">
                         {% for i in range(7) %}
@@ -178,9 +180,9 @@
 
                 <div class="row">
                     <div class="col-xs-2">
-                        <label for="pickup-window">Possible Detour</label>
-                        <select class="form-control" d="pickup-window" name="pickup-window"
-                            aria-describedby="pickup-window" placedholder="" required>
+                        <label for="detour">Possible Detour</label>
+                        <select class="form-control" d="detour" name="detour"
+                            aria-describedby="detour" placedholder="" required>
                             <option value="No">No detour</option>
                             <option value="15 min">15 min</option>
                             <option value="30 min">30 min</option>
