--- a/templates/search.html
+++ b/templates/search.html
@@ -3,7 +3,10 @@
 {% block Title %} Home {% endblock %}
 
 {% block head %} 
-<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
 <!-- moment js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>   
 <!-- bootstrap datepicker -->
@@ -15,6 +18,53 @@
  -->
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBm2Vj5UTzzCPn_6ZYRQxOT55U3PtKXgQ&libraries=places" async defer></script>
+  <script>
+  $( function() {
+    $( "#slider-range-max" ).slider({
+      range: "max",
+      min: 0,
+      max: 1440,
+      step: 15,
+      value: 750,
+      slide: function( event, ui ) {
+        var hours1 = Math.floor(ui.value / 60);
+        var minutes1 = ui.value - (hours1 * 60);
+
+        if (hours1.length == 1) hours1 = '0' + hours1;
+        if (minutes1.length == 1) minutes1 = '0' + minutes1;
+        if (minutes1 == 0) minutes1 = '00';
+        if (hours1 >= 12) {
+            if (hours1 == 12) {
+                hours1 = hours1;
+                minutes1 = minutes1 + " PM";
+            } else {
+                hours1 = hours1 - 12;
+                minutes1 = minutes1 + " PM";
+            }
+        } else {
+            hours1 = hours1;
+            minutes1 = minutes1 + " AM";
+        }
+        if (hours1 == 0) {
+            hours1 = 12;
+            minutes1 = minutes1;
+        }
+        $('.slider-time').html(hours1 + ':' + minutes1);
+        $('.slider-time').val(hours1 + ':' + minutes1);
+
+
+    }
+});
+
+  } );
+
+$(function() {
+  $('.ui-slider-handle').on('mouseup', function(evt) {
+        console.log($('.slider-time').val());
+      })
+});
+  </script>
+
 
 
 {% endblock %}
@@ -84,6 +134,16 @@
     <span class="col-xs-4">Toggle Pickup Time</span>
     <span class="col-xs-4">Toggle Price</span>
   </div>
+  <br>
+
+  <div id="time-slider">
+    <label for="slider-range-max">Time Range: <span class="slider-time">10:00 AM</span></label>
+    <div class="row col-xs-4" id="slider-range-max"></div>
+  </div>
+  
+
+  
+
 
   <br>
 
@@ -151,12 +211,20 @@
                 {% endif %}
 
                 {% if ride.start_state is not none %}
-                {{ ride.start_state }}, 
+                  {% if ride.start_zip %}
+                    {{ ride.start_state }}, 
+                  {% else %}
+                    {{ ride.start_state }}
+                  {% endif %}
                 {% endif %}
 
                 {% if ride.start_zip is not none %}
                 {{ ride.start_zip }}
                 {% endif %}
+
+
+
+
              </span>
             </p>
           </div>
@@ -182,7 +250,11 @@
                 {% endif %}
 
                 {% if ride.end_state is not none %}
-                {{ ride.end_state }}, 
+                  {% if ride.end_zip %}
+                    {{ ride.end_state }}, 
+                  {% else %}
+                    {{ ride.end_state }}
+                  {% endif %}
                 {% endif %}
 
                 {% if ride.end_zip is not none %}
