Created function to transform ride data to dictionary so that it can become json. Setup AJAX call to get search results data

--- a/templates/search.html
+++ b/templates/search.html
@@ -414,14 +414,34 @@
         $('.slider-time').val(hours1 + ':' + minutes1);
       }
     });
+    $(".slider-time").val( $("#slider-range-max").slider("value") );
 
   } );
 
   // Event Listener/Handler for toggling of Cost Attr
+  var mydata;
   $(function() {
-    $('.ui-slider-handle').on('mouseup', function(evt) {
-          console.log($('.slider-time').val());
-        })
+
+
+    function replaceResults(data) {
+      mydata = data;
+      console.log(data);
+    }
+
+    function newSearch(evt) {
+      $.get('/jsontest.json', replaceResults);
+    }
+
+    $('.ui-slider-handle').on('mouseup', newSearch);
+
+    // function(evt) {
+    //       $.get('/jsontest.json'), function(data) {
+    //         console.log(data)
+    //       }
+
+    //       console.log($('.slider-time').val());
+    //     })
+
   });
 </script>
 
