Re-adjusted ALL date storage (I wasn't storing UTC correctly). Finished rendering search results page with js from AJAX json response

--- a/templates/rideform.html
+++ b/templates/rideform.html
@@ -31,9 +31,9 @@
 <!-- Why isn't placeholder text displaying -->
 
 <div class="well col-xs-8 col-md-12">
-    Add flexible pickup window. To Do:
-    - Change cost so decimals not allowed
-    - If there is no street number or street... Pop up a message!
+    To Do:<br>
+    - Change cost so decimals not allowed<br>
+    - If there is no street number or street... Pop up a message!<br>
 </div>
 
 <form action="/post-ride" method="post" id="ride-form">
