--- a/templates/search.html
+++ b/templates/search.html
@@ -40,11 +40,15 @@
           <label for="start-address">Enter Your Destination</label>
         </div>
 
-        <div class="form-group">
+      
+
+          {% if start_search["term"] == 'all' %}
+          <div class="form-group">
           <input type="text" class="form-control" id="autocomplete" name="start-address"
             aria-describedby="starting destination" placeholder="Enter Starting Location" required>
 
           <div>
+            <input type="text" id="searchstring" name="searchstring" value="{{ start_search["term"] }}"></input>
            <!--  <input type="text" id="street_number" name="street_number"></input>
             <input type="text" id="route" name="route"></input> -->
             <input type="hidden" id="locality" name="locality"></input>
@@ -64,15 +68,56 @@
           <input aria-label type="text" class="form-control" id="autocomplete2" name="end-address"
           aria-describedby="ending destination" placeholder="Enter Ending Location" required> 
           <div>
+              <input type="text" id="searchstring2" name="searchstring2"></input>
              <!--  <input type="text" id="street_number2" name="street_number"></input>
               <input type="text" id="route2" name="route2"></input> -->
               <input type="hidden" id="locality2" name="locality2"></input>
-              <input type="hidden" id="administrative_area_level_12" name="administrative_area_level_1_2"></input>
+              <input type="hidden" id="administrative_area_level_1_2" name="administrative_area_level_1_2"></input>
               <input type="hidden" id="postal_code2" name="postal_code2"></input>
               <input type="hidden" id="lat2" name="lat2"></input>
               <input type="hidden" id="lng2" name="lng2"></input>
           </div>             
         </div>
+
+        {% else %}
+          <div class="form-group">
+          <input type="text" class="form-control" id="autocomplete" name="start-address"
+            aria-describedby="starting destination" placeholder="{{ start_search["term"] }}" required>
+
+          <div>
+            <input type="text" id="searchstring" name="searchstring" value="{{ start_search["term"] }}"></input>
+
+           <!--  <input type="text" id="street_number" name="street_number"></input>
+            <input type="text" id="route" name="route"></input> -->
+            <input type="hidden" id="locality" name="locality"></input>
+            <input type="hidden" id="administrative_area_level_1" name="administrative_area_level_1" value=" {{ start_search["state"] }}"></input>
+            <input type="hidden" id="postal_code" name="postal_code"></input>
+            <input type="hidden" id="lat" name="lat" value=" {{ start_search["lat"] }}"></input>
+            <input type="hidden" id="lng" name="lng" value=" {{ start_search["lng"] }}"></input>        
+          </div>
+
+        </div>
+
+        <div class="form-group">
+          <span class="glyphicon glyphicon-transfer" aria-hidden="true"></span>
+        </div>
+
+        <div class="form-group">
+          <input aria-label type="text" class="form-control" id="autocomplete2" name="end-address"
+          aria-describedby="ending destination" placeholder="{{ end_search["term"] }}" required> 
+          <div>
+              <input type="text" id="searchstring2" name="searchstring2" value="{{ end_search["term"] }}"></input>
+             <!--  <input type="text" id="street_number2" name="street_number"></input>
+              <input type="text" id="route2" name="route2"></input> -->
+              <input type="hidden" id="locality2" name="locality2"></input>
+              <input type="hidden" id="administrative_area_level_1_2" name="administrative_area_level_1_2" value=" {{ end_search["state"] }}"></input>
+              <input type="hidden" id="postal_code2" name="postal_code2"></input>
+              <input type="hidden" id="lat2" name="lat2" value=" {{ end_search["lat"] }}"></input>
+              <input type="hidden" id="lng2" name="lng2" value=" {{ end_search["lng"] }}"></input>
+          </div>             
+        </div>
+
+        {% endif %}
 
     <!-- submit button -->
       <button type="submit" class="btn btn-primary" style="display:none">Submit</button>
@@ -101,7 +146,7 @@
 
   <br>
 
-  <table class="table table-hover">
+  <table class="table table-hover" id="results">
     {% if rides %}
 
     {% for ride in rides %}
